# tinyslip

./: .gitmodules  .travis.yml  AUTHORS.md  CMakeLists.txt  Findtinyslip.cmake  Makefile  Makefile.avr  Makefile.common  Makefile.cpputest  Makefile.linux  README.md  component.mk  doxygen.cfg  fake_connection.h  fake_endpoint.cpp  fake_wire.cpp  keywords.txt  library.json  library.properties  package-linker.cmake  package_make.mk  platform-avr.mk  platform-esp32.mk  platform-linux.mk  project.mk  tiny_base_helper.h  tinyslip.cppcheck  tinyslip.pc  toolchain.mk
.travis/: check_install.sh  run_tests.sh
bs/: package-linker.cmake  package_make.mk  platform-avr.mk  platform-linux.mk  project.mk  toolchain.mk
buildsys/: README.md  package-linker.cmake  project.mk  toolchain.mk
buildsys/unittest/simple_lib/: CMakeLists.txt  Makefile  simple.pc
doc/: mainpage.dox
examples/arduino_generic/tinyslip_loopback/: tinyslip_loopback.ino
examples/arduino_zero_m0/tinyslip_loopback_m0/: tinyslip_loopback_m0.ino
examples/esp32_idf/uart/: README.md
examples/esp32_idf/uart/tinyslip_generator/: README.md  sdkconfig
examples/esp32_idf/uart/tinyslip_generator/components/tinyhal/: README.md
examples/esp32_idf/uart/tinyslip_generator/components/tinyslip/: README.md
examples/esp32_idf/uart/tinyslip_generator/main/: main.cpp
examples/esp32_idf/uart/tinyslip_loopback/: Makefile  sdkconfig
examples/esp32_idf/uart/tinyslip_loopback/main/: main.cpp
examples/linux/loopback/: CMakeLists.txt  tinyslip_loopback.cpp
examples/linux/slip_demo/: CMakeLists.txt  slip_demo.cpp
examples/linux/slip_demo_multithread/: CMakeLists.txt  slip_demo_multithread.cpp
examples/win32/loopback/: README.md
src/: TinyPacketSlip.h  TinyProtocolSlip.cpp  TinyProtocolSlip.h
src/hal/: tiny_list.c  tiny_serial.c  tiny_serial.h  tiny_types.h
src/hal/impl/: avr_hal.inl  esp32_hal.inl  hal_single_core.inl  mingw32_hal.inl  no_platform_hal.inl  win32_hal.inl
src/hal/serial/: linux_serial.h
src/proto/slip/: tiny_slip.c  tiny_slip.h  tiny_slip_int.h
tinyhal/: .travis.yml  CMakeLists.txt  Makefile.linux  README.md  library.json  library.properties
tinyhal/src/hal/: tiny_types.c
tinyhal/src/hal/impl/: arduino_hal.inl  avr_hal.inl  hal_single_core.inl  linux_hal.inl
tinyhal/src/hal/serial/: linux_serial.inl  win32_serial.inl
tinyhal/tools/: generate_coverage.sh
tools/: create_vsock.sh  generate_coverage.sh  test_compilation.sh  update_externals.sh
unittest/: CMakeLists.txt  main.cpp  packet_tests.cpp  run_tests.sh  slip_tests.cpp
unittest/cpputils/: README.md  fake_connection.cpp  fake_endpoint.h  fake_wire.h  semaphore_helper.h  tiny_base_helper.cpp
unittest/helpers/: tiny_slip_helper.cpp  tiny_slip_helper.h
unittest/simple_lib/: Findsimple.cmake
unittest/simple_lib/src/: header.h  source.c
